# drop-medical-api

./: .dockerignore  .env  Cargo.toml  Dockerfile  justfile
.sqlx/: query-0adb98347a44a1e4f9c73eff586cb599da3d6548d6e4a46ab77000f2cbc11322.json  query-1c9af8e3ef4d77e2301a2a999cf9c92d16a9c7eae634f288936041ae6513f843.json  query-21aab8ade756072140c2a463c1bfd5f4e015a53a6d861393b306309ba8556b59.json  query-2ef14a3849a13e60a6784c239dcefd982bbe5a1147c0ae5e0d2d42602da24255.json  query-314bc9f62e9ee0167bf02aa8acb25354590799f14bce982e1a809235976147d0.json  query-66ded5aa9a0254129689830df1afb48ae7f1c00eaa97bac554183b369cbc33d3.json  query-80990a914b24e21eedd9901e54f378aebcae602b85d07bebc4ed283209a8016b.json  query-b0012fc284846de4a1578da70471b397fec4bfa1d8ab8e17c122a94992a1dd23.json  query-d79e34ef7376d9198a9b86b45272e76f896d23d84dc6b9d2e923206ab520415a.json  query-d86880729f3bf39ff5237771ca70026c9866580d6a1ff9980d798dbf5fd272e3.json  query-eb68a4bdfea2724acc2d91840f6bc26ebe1aea0ade4f4d8c945a4472ada00169.json  query-fc526a01feed5625a37702f3275b1f48b06b96f3fa73015055e5c01d83c3e678.json
configuration/: base.toml  local.toml  production.toml
database/instances/: local.db
database/migrations/: 20240318173305_init_db.sql  20240320001913_droppers.sql
database/schemas/: dump.sql  main.sql
database/scripts/: init_db.sh  renew_db.sh
src/: api.rs  configuration.rs  lib.rs  main.rs  state.rs  turso.rs
src/api/routes/: machines.rs  mod.rs  users.rs
src/database/: mod.rs
src/model/: users.rs
src/models/: machines.rs  mod.rs  users.rs
src/sessions/: auth.rs  axum_impls.rs  middleware.rs  mod.rs
src/turso/: mod.rs
tests/: api.rs
