[package]
name = "drop-medical-api"
version = "0.1.0"
edition = "2021"
authors = ["Tomás Marques <tomascpmarques@gmail.com>"]


[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.4", features = ["macros"] }
config = "0.14.0"
dotenvy = "0.15.7"
getset = "0.1.2"
libsql = "0.3.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "net"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["v7", "serde"] }
