[package]
name = "drop-medical-api"
version = "0.1.0"
edition = "2021"
authors = ["Tomás Marques <tomascpmarques@gmail.com>"]


[dependencies]
anyhow = "1.0.81"
getset = "0.1.2"
thiserror = "1.0.58"

axum = { version = "0.7.4", features = ["macros"] }
http-body-util = "0.1.1"
jsonwebtoken = "9.2.0"

chrono = { version = "0.4.35", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v7", "serde"] }

config = "0.14.0"
dotenvy = "0.15.7"

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

tokio = { version = "1.36.0", features = [
  "macros",
  "rt-multi-thread",
  "net",
  "sync",
] }

tower = "0.4.13"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["trace"] }

tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

libsql = "0.3.1"
async-trait = "0.1.78"
tower-sessions = "0.11.1"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "uuid"] }
